--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-redux": "^7.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
